--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
         <a href="{{ url_for('mentors') }}">Technical Mentor</a>
         <a href="{{ url_for('contact') }}">Contact Us</a>
         <a href="{{ url_for('apply') }}">Apply</a>
-        <a href="{{ url_for('auth') }}">login</a>
+        <!-- <a href="{{ url_for('auth') }}">login</a> -->
         {% if 'user_id' in session %}
         <a href="{{ url_for('auth.logout') }}">Logout</a>
         {% else %}
@@ -208,7 +208,7 @@
           </div>
           <!-- Contact Section -->
           <div class="footer-column">
-            <h3>Contact</h3>
+            <h3>Quick Links</h3>
             <ul>
               <li><a href="{{ url_for('home') }}">Home</a></li>
               <li><a href="{{ url_for('about') }}">About</a></li>
