--- a/templates/auth.html
+++ b/templates/auth.html
@@ -162,7 +162,7 @@
           </div>
           <!-- Contact Section -->
           <div class="footer-column">
-            <h3>Contact</h3>
+            <h3>Quick Links</h3>
             <ul>
               <li><a href="{{ url_for('home') }}">Home</a></li>
               <li><a href="{{ url_for('about') }}">About</a></li>
