--- a/templates/applications.html
+++ b/templates/applications.html
@@ -6,7 +6,7 @@
     <title>Applications</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/admin.css') }}"
+      href="{{ url_for('static', filename='css/applications.css') }}"
     />
   </head>
   <body>
@@ -29,51 +29,53 @@
       </form>
 
       <table>
-        <tr>
-          <th>ID</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Email</th>
-          <th>Phone</th>
-          <th>Gender</th>
-          <th>County</th>
-          <th>Course</th>
-          <th>Actions</th>
-        </tr>
-        {% for application in applications %}
-        <tr>
-          <td>{{ application.id }}</td>
-          <td>{{ application.first_name }}</td>
-          <td>{{ application.last_name }}</td>
-          <td>{{ application.email }}</td>
-          <td>{{ application.phone }}</td>
-          <td>{{ application.gender }}</td>
-          <td>{{ application.county }}</td>
-          <td>{{ application.course }}</td>
-          <td class="actions">
-            <form
-              action="{{ url_for('edit_application', id=application.id) }}"
-              method="GET"
-              style="display: inline"
-            >
-              <button class="edit" type="submit">Edit</button>
-            </form>
-            <form
-              action="{{ url_for('delete_application', id=application.id) }}"
-              method="POST"
-              style="display: inline"
-            >
-              <button
-                class="delete"
-                type="submit"
-                onclick="return confirm('Are you sure you want to delete this application?');"
-              >
-                Delete
-              </button>
-            </form>
-          </td>
-        </tr>
-        {% endfor %}
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Gender</th>
+            <th>County</th>
+            <th>Course</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for application in applications %}
+          <tr>
+            <td>{{ application.id }}</td>
+            <td>{{ application.first_name }}</td>
+            <td>{{ application.last_name }}</td>
+            <td>{{ application.email }}</td>
+            <td>{{ application.phone }}</td>
+            <td>{{ application.gender }}</td>
+            <td>{{ application.county }}</td>
+            <td>{{ application.course }}</td>
+            <td>
+              <!-- Actions Container -->
+              <div class="actions-container">
+                <form
+                  action="/accept_application/{{ application.id }}"
+                  method="POST"
+                  style="display: inline"
+                >
+                  <button type="submit" class="btn btn-success">Accept</button>
+                </form>
+
+                <form
+                  action="/decline_application/{{ application.id }}"
+                  method="POST"
+                  style="display: inline"
+                >
+                  <button type="submit" class="btn btn-danger">Decline</button>
+                </form>
+              </div>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
       </table>
 
       <!-- Pagination Controls -->
