--- a/templates/apply.html
+++ b/templates/apply.html
@@ -10,6 +10,10 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/auth.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
@@ -26,10 +30,20 @@
         <a href="{{ url_for('apply') }}" onclick="showLoading()">Apply</a>
         <!-- <a href="{{ url_for('auth') }}">login</a> -->
         {% if 'user_id' in session %}
-        <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
-        {% endif %}
+        <div class="profile-menu">
+          <img
+            src="{{ url_for('static', filename='images/profile-icon.png') }}"
+            alt="Profile"
+            class="profile-icon"
+            onclick="toggleProfileMenu()"
+          />
+          <div id="profileDropdown" class="profile-dropdown hidden">
+            <p id="userName">Name: Loading...</p>
+            <p id="userEmail">Email: Loading...</p>
+            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout</a>
+          </div>
+        </div>
+      {% endif %}
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
@@ -298,6 +312,7 @@
     
 
     <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='js/apply.js') }}"></script>
   </body>
 </html>
