--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Noor Bootcamp</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 
@@ -66,10 +67,20 @@
             <a href="{{ url_for('apply') }}">Apply</a>
             <!-- <a href="{{ url_for('auth') }}">login</a> -->
             {% if 'user_id' in session %}
-        <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
-        {% endif %}
+        <div class="profile-menu">
+          <img
+            src="{{ url_for('static', filename='images/profile-icon.png') }}"
+            alt="Profile"
+            class="profile-icon"
+            onclick="toggleProfileMenu()"
+          />
+          <div id="profileDropdown" class="profile-dropdown hidden">
+            <p id="userName">Name: Loading...</p>
+            <p id="userEmail">Email: Loading...</p>
+            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout</a>
+          </div>
+        </div>
+      {% endif %}
         </div>
         <div class="toggle-menu" onclick="toggleMenu()">
             <div></div>
@@ -212,6 +223,7 @@
       </script>
 
     <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
