--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/index.css') }}"
     />
+    <link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='css/auth.css') }}"
+  />
 
     <link
       rel="stylesheet"
@@ -73,10 +77,21 @@
         <a href="{{ url_for('apply') }}">Apply</a>
         <!-- <a href="{{ url_for('auth') }}">login</a> -->
         {% if 'user_id' in session %}
-        <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
-        {% endif %}
+        <div class="profile-menu">
+          <img
+            src="{{ url_for('static', filename='images/profile-icon.png') }}"
+            alt="Profile"
+            class="profile-icon"
+            onclick="toggleProfileMenu()"
+          />
+          <div id="profileDropdown" class="profile-dropdown hidden">
+            <p id="userName">Name: Loading...</p>
+            <p id="userEmail">Email: Loading...</p>
+            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout</a>
+          </div>
+        </div>
+      {% endif %}
+      
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
@@ -278,6 +293,8 @@
     <!-- Link to the external JavaScript in the js folder -->
     <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+
     <!--   *****   JQuery Link   *****   -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
