--- a/templates/mentors.html
+++ b/templates/mentors.html
@@ -7,6 +7,7 @@
     <!-- Link to the external CSS in the css folder -->
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
 
 
     <link
@@ -78,10 +79,20 @@
       <a href="{{ url_for('apply') }}">Apply</a>
       <!-- <a href="{{ url_for('auth') }}">login</a> -->
       {% if 'user_id' in session %}
-        <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
-        {% endif %}
+        <div class="profile-menu">
+          <img
+            src="{{ url_for('static', filename='images/profile-icon.png') }}"
+            alt="Profile"
+            class="profile-icon"
+            onclick="toggleProfileMenu()"
+          />
+          <div id="profileDropdown" class="profile-dropdown hidden">
+            <p id="userName">Name: Loading...</p>
+            <p id="userEmail">Email: Loading...</p>
+            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout</a>
+          </div>
+        </div>
+      {% endif %}
     </div>
     <div class="toggle-menu" onclick="toggleMenu()">
       <div></div>
@@ -229,6 +240,8 @@
 
   <!-- Link to the external JavaScript in the js folder -->
   <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+
   <script src="js/index.js"></script>
   <!--   *****   JQuery Link   *****   -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
