--- a/static/css/applications.css
+++ b/static/css/applications.css
@@ -64,10 +64,12 @@ td {
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
+
 th,
 tr {
   border-bottom: 1px solid #ddd;
 }
+
 tr th {
   background-color: #f2f2f2;
   color: #333;
@@ -92,9 +94,6 @@ tr:hover {
 /* Actions Container */
 .actions-container {
   display: flex;
-  flex-direction: column; /* Stack buttons vertically */
-  flex-direction: row;
-
   gap: 10px; /* Space between buttons */
 }
 
@@ -122,6 +121,15 @@ tr:hover {
 
 .btn-danger:hover {
   background-color: #c82333;
+}
+
+.btn-delete {
+  background-color: #ffc107;
+  color: white;
+}
+
+.btn-delete:hover {
+  background-color: #e0a800;
 }
 
 /* Pagination Styles */
