--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,9 @@
           <div id="profileDropdown" class="profile-dropdown hidden">
             <p id="userName">Name: Loading...</p>
             <p id="userEmail">Email: Loading...</p>
-            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout</a>
+            <a href="{{ url_for('auth.logout') }}" class="logout-button">Logout
+              
+            </a>
           </div>
         </div>
       {% endif %}
