--- a/templates/auth.html
+++ b/templates/auth.html
@@ -44,7 +44,10 @@
         <a href="{{ url_for('mentors') }}">Technical Mentor</a>
         <a href="{{ url_for('contact') }}">Contact Us</a>
         <a href="{{ url_for('apply') }}">Apply</a>
-        <a href="{{ url_for('auth') }}">login</a>
+        <a href="{{ url_for('auth') }}" class="login-button">
+          <i class="fas fa-sign-in-alt"></i> Login
+        </a>
+        
         {% if 'user_id' in session %}
   <div class="profile-menu">
     <img
