--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/admin.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/contacts.css') }}"
+    />
   </head>
   <body>
     <div class="container">
